# python-keystoneclient-kerberos

./: README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
examples/scripts/: kerberos-unscoped.sh
keystoneclient-kerberos/tests/auth/: utils.py
