[metadata]
name = python-keystoneclient_kerberos
summary = Kerberos Extensions to the Client Library for OpenStack Identity
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    keystoneclient_kerberos

[entry_points]

keystoneclient.auth.plugin =
    v3kerberos = keystoneclient.contrib.auth.v3.kerberos:Kerberos

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
warnerrors = True

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = keystoneclient_kerberos/locale
domain = keystoneclient_kerberos

[update_catalog]
domain = keystoneclient_kerberos
output_dir = keystoneclient_kerberos/locale
input_file = keystoneclient_kerberos/locale/keystoneclient_kerberos.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = keystoneclient_kerberos/locale/keystoneclient_kerberos.pot

[wheel]
universal = 1
